<resources>
    <string name="app_name">GRADE VIEW</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="requestPasswordReset">REQUEST</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dorememberpassword">I Do Remeber My Password</string>
    <string name="log_in">Log In</string>
    <string name="resetpassword">Need help with your account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="title_activity_nav_home">nav_home</string>
    <!--<string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--<string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--<string name="nav_header_title">JIMMA UNIVERSTY</string>-->
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--<string name="nav_header_desc">Navigation header</string>-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IMMA UNIVERSTY</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">Grade List</string>
    <string name="title_activity_attendance">AttendanceActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="turn_off_flashlight">FlashLight on</string>
    <string name="turn_on_flashlight">flashLight off</string>
    <string name="title_activity_main">QR and Barcode Scanner</string>
    <string name="message">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="error_flash">Camera Error. Failed to Open. Error:</string>
    <string name="title_activity_attaindance">AttaindanceActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_grade_view">GradeViewActivity</string>
    <string name="title_activity_chat_app">ChatAppActivity</string>
    <string name="emailrci">By clicking RESET,you will receive an email to reset you password</string>
    <string name="resetpasschat">Reset</string>
    <string name="chat_email">Your Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
